fixes minor design issue in footer

--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
     <div class="twelve columns">
       <hr />
       <div class="row">
-        <div class="three columns">
+        <div class="four columns">
           <p>&copy; Copyright 2013 - webionate GmbH</p>
         </div>
-        <div class="nine columns">
+        <div class="eight columns">
           <ul class="link-list right">
             <li><a href="http://www.webionate.de">webionate.de</a></li>
             <li><a href="http://www.webionate.de/references.html">Referenzen (de)</a></li>
